# Fleur

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  env.example
engines/: Cargo.toml  README.md
engines/crates/furnace/: Cargo.toml
engines/crates/furnace-core/: Cargo.toml
engines/crates/furnace-core/src/: lib.rs
engines/crates/furnace-io/: Cargo.toml
engines/crates/furnace-io/src/: clickhouse.rs  error.rs  lib.rs  request.rs  rowbinary.rs  rows.rs  schema.rs  sql.rs  summary.rs  testing.rs  validation.rs
engines/crates/furnace/src/: cli.rs  cli_tests.rs  main.rs  output.rs
engines/crates/rearview/: Cargo.toml
engines/crates/rearview-core/: Cargo.toml
engines/crates/rearview-core/config/: metric_policy.yml
engines/crates/rearview-core/src/: config.rs  error.rs  examples.rs  lib.rs  nats.rs  portfolio_performance.rs  portfolio_trade_metrics.rs  strategy_backtest.rs  strategy_portfolio.rs
engines/crates/rearview-portfolio-worker/: Cargo.toml
engines/crates/rearview-portfolio-worker/src/: main.rs
engines/crates/rearview-server/: Cargo.toml
engines/crates/rearview-server/src/: main.rs
engines/crates/rearview/config/: metric_policy.yml
engines/crates/rearview/src/: config.rs  error.rs  lib.rs  main.rs
pipeline/: pyproject.toml
pipeline/contract_tools/: pyproject.toml
pipeline/contract_tools/src/fleur_contracts/: __init__.py  cli.py  clickhouse_layer_migration.py  clickhouse_types.py  description_quality.py  env.py  generate.py  loader.py  schema.py  validate.py  validate_clickhouse.py  validate_parquet.py
pipeline/contract_tools/tests/: test_cli.py  test_clickhouse_layer_migration.py  test_contract_registry.py  test_parquet_adapter.py  test_profile_raw_source.py
pipeline/contracts/: README.md  naming_rules.yml
pipeline/contracts/datasets/: baostock__query_history_k_data_plus_daily.yml  baostock__query_history_k_data_plus_daily_compacted.yml  baostock__query_stock_basic.yml  chinabond__government_bond.yml  eastmoney__balance.yml  eastmoney__cashflow_sq.yml  eastmoney__cashflow_ytd.yml  eastmoney__dividend_allotment.yml  eastmoney__dividend_main.yml  eastmoney__equity_history.yml  eastmoney__freeholders.yml  eastmoney__income_sq.yml  eastmoney__income_ytd.yml  jiuyan__action_field.yml  jiuyan__action_field_compacted.yml  jiuyan__industry_list.yml  jiuyan__industry_ocr.yml  jiuyan__industry_ocr_snapshot.yml  sina__trade_calendar.yml  ths__limit_up_pool.yml  ths__limit_up_pool_compacted.yml
pipeline/contracts/glossary/: fields.yml  tables.yml
pipeline/elt/: README.md  dbt_project.yml  profiles.yml
pipeline/elt/macros/standardize/: schema.yml  security_code.sql
pipeline/elt/metadata/: field_glossary.yml
pipeline/elt/models/: sources.yml  sources_fleur_backtest.yml  sources_fleur_calculation.yml  sources_fleur_portfolio.yml
pipeline/elt/models/_docs/: fields.md
pipeline/elt/models/marts/: mart_benchmark_returns_daily.sql  mart_benchmark_returns_daily.yml  mart_government_bond_yields_daily.sql  mart_government_bond_yields_daily.yml  mart_index_basic_snapshot.sql  mart_index_basic_snapshot.yml  mart_index_quotes_daily.sql  mart_index_quotes_daily.yml  mart_portfolio_performance_metric_rank.sql  mart_portfolio_performance_metric_rank.yml  mart_portfolio_trade_metric_rank.sql  mart_portfolio_trade_metric_rank.yml  mart_risk_free_rate_daily.sql  mart_risk_free_rate_daily.yml  mart_stock_allotment_event.sql  mart_stock_allotment_event.yml  mart_stock_balance_sheet.sql  mart_stock_balance_sheet.yml  mart_stock_basic_snapshot.sql  mart_stock_basic_snapshot.yml  mart_stock_cashflow_statement_quarterly.sql  mart_stock_cashflow_statement_quarterly.yml  mart_stock_cashflow_statement_ytd.sql  mart_stock_cashflow_statement_ytd.yml  mart_stock_dividend_plan.sql  mart_stock_dividend_plan.yml  mart_stock_free_float_shareholder_top10.sql  mart_stock_free_float_shareholder_top10.yml  mart_stock_income_statement_quarterly.sql  mart_stock_income_statement_quarterly.yml  mart_stock_income_statement_ytd.sql  mart_stock_income_statement_ytd.yml  mart_stock_limit_up_pool_daily.sql  mart_stock_limit_up_pool_daily.yml  mart_stock_momentum_indicator.sql  mart_stock_momentum_indicator.yml  mart_stock_momentum_indicator_daily.sql  mart_stock_momentum_indicator_daily.yml  mart_stock_price_pattern_daily.sql  mart_stock_price_pattern_daily.yml  (+13 more)
pipeline/elt/models/staging/: staging.yml  stg_baostock__query_history_k_data_plus_daily.sql  stg_baostock__query_stock_basic.sql  stg_jiuyan__industry_list.sql  stg_jiuyan__industry_ocr_snapshot.sql  stg_sina__trade_calendar.sql
pipeline/elt/scripts/: profile_raw_source.py  validate_f10_passthrough_coverage.py  validate_field_glossary.py  validate_layer_routing.py  validate_staging_readiness.py
pipeline/elt/tests/: int_stock_quotes_daily_unadj_change_pct_range.sql  int_stock_quotes_daily_unadj_prev_volume_matches_previous_trade_date.sql  int_stock_quotes_daily_unadj_trade_date_after_t1_restore.sql
pipeline/elt/tests/generic/: baostock_security_board_consistency.sql  cn_security_code_format.sql  unique_combination_of_columns.sql
pipeline/elt/tests/marts/: mart_stock_momentum_indicator_rsi_bounds.sql  mart_stock_quotes_daily_adjusted_key_coverage.sql  mart_stock_quotes_daily_adjusted_passthrough_matches.sql  mart_stock_quotes_daily_financial_valuation_asof_matches.sql  (+3 more)
pipeline/migrate/: alembic.ini  env.py
pipeline/migrate/versions/: 0001_create_jiuyan_industry_images.py
pipeline/scheduler/: README.md  pyproject.toml
pipeline/scheduler/scripts/: check_no_pycache.py  extract_eastmoney_schema_fields.py  generate_eastmoney_schemas.py  generate_field_docs.py
pipeline/scheduler/tests/: test_eastmoney.py  test_http_resources_client.py  test_http_resources_market_events.py  test_jiuyan_industry_ocr_assets.py  test_jiuyan_industry_ocr_client.py  test_jiuyan_industry_ocr_image_urls.py  test_jiuyan_industry_ocr_migration.py  test_jiuyan_industry_ocr_schema.py  test_jiuyan_industry_ocr_state_flow.py  test_sina_trade_calendar.py
(+1066 files in other folders)
