[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Proprietary"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
large_enum_variant = "deny"
needless_collect = "deny"
redundant_clone = "deny"
todo = "deny"
unimplemented = "deny"
