[project]
name = "pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "dbt-clickhouse>=1.10.0",
    "dbt-core>=1.11.11",
    "psycopg[binary]>=3.2.10",
]

[tool.uv.workspace]
members = [
    "contract_tools",
    "scheduler",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "scheduler/src/scheduler/defs/sources/eastmoney/generated",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra"
pythonpath = [
    "contract_tools/src",
    "scheduler",
]
testpaths = [
    "contract_tools/tests",
    "scheduler/tests",
]
python_files = [
    "test_*.py",
]
filterwarnings = [
    "default",
]

[tool.coverage.run]
branch = true
source = [
    "contract_tools/src/fleur_contracts",
    "scheduler/src/scheduler",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.pyright]
include = [
    "contract_tools/src/fleur_contracts",
    "contract_tools/tests",
    "scheduler/src/scheduler",
    "scheduler/tests",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
