[project]
name = "contract-tools"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "clickhouse-connect>=1.1.1",
    "pydantic>=2.13.4",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
fleur-contracts = "fleur_contracts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fleur_contracts"]
