[project]
name = "scheduler"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "boto3>=1.41.0",
    "dagster==1.13.6",
    "pyarrow>=22.0.0",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "scheduler"
registry_modules = [
    "scheduler.components.*",
]

