[project]
name = "scheduler"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "aiohttp>=3.13.5",
    "dagster==1.13.6",
    "psycopg[binary]>=3.2.10",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "alembic>=1.16.0",
    "dagster-dg-cli",
    "dagster-webserver",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "scheduler"
registry_modules = [
    "scheduler.components.*",
]
