[package]
name = "furnace"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
furnace-core = { path = "../furnace-core" }
furnace-io = { path = "../furnace-io" }

[dev-dependencies]
clickhouse = { version = "0.15.1", features = ["time"] }
furnace-io = { path = "../furnace-io", features = ["testing"] }

[lints]
workspace = true
