[package]
name = "rearview-portfolio-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-nats = "0.49.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rearview-core = { path = "../rearview-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
