[package]
name = "rearview-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-nats = "0.49.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rearview-core = { path = "../rearview-core" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
